fixed alignment issue on about section

--- a/styles/sass/_indexPage.scss
+++ b/styles/sass/_indexPage.scss
@@ -214,6 +214,10 @@
     text-align: center;
   }
 
+  .sectionOne p {
+    text-align: center;
+  }
+
   //   START OF MEDIA QUERIES
 
   @media (max-width: 1300px) {
