--- a/styles/style.css
+++ b/styles/style.css
@@ -1032,6 +1032,10 @@ input[type="checkbox"]:checked ~ ul {
   text-align: center;
 }
 
+.indexPage .sectionOne p {
+  text-align: center;
+}
+
 @media (max-width: 1300px) {
   .indexPage .sectionThreeFlexContainer {
     padding: 100px 0;
